clusters/raspberrypi/apps/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.4.0
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 9091
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-pvc
