clusters/raspberrypi/apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-svc
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
  - port: 9000
    targetPort: 9091
