clusters/raspberrypi/apps/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: mealie
spec:
  defaultBackend:
    service:
      name: mealie-svc
      port:
        number: 9000
  ingressClassName: tailscale
  tls:
  - hosts:
    - meals
